syntax = "proto3";

package com.example.chat;

option java_multiple_files=true;
option java_package="com.example.chat.proto";
option java_outer_classname="ChannelUpdateProto";

import "common.proto";

message ChannelUpdate{
    ChannelUpdateType type = 1;
    Channel channel = 2;
}
